add custom login page

--- a/bet/Base.lproj/Main.storyboard
+++ b/bet/Base.lproj/Main.storyboard
@@ -1017,6 +1017,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="5ts-2M-lsM"/>
+        <segue reference="8e0-kw-2OT"/>
     </inferredMetricsTieBreakers>
 </document>
